<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Ticket"
    android:id="@+id/fondo"
android:background="@drawable/background_gradient">

<ImageButton
    android:id="@+id/btnVolverTicket"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:src="@drawable/ic_icono_flacha_back"
    android:background="@android:color/transparent"
    android:padding="10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    />


<TextView
    android:id="@+id/textViewTicket"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:fontFamily="@font/choose_love"
    android:gravity="center"
    android:padding="5dp"
    android:textSize="25sp"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:text="@string/titulo_ticket"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:endIconMode="clear_text"
        tools:ignore="MissingConstraints"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewTicket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textEmail_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textNombreProducto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/nombre_del_producto"
    app:endIconMode="clear_text"
    tools:ignore="MissingConstraints"
    android:layout_marginTop="50dp"
    android:textColor="@color/white"
    android:textColorHint="@color/white"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    app:layout_constraintTop_toBottomOf="@+id/textEmail"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textNombreProducto_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />

</com.google.android.material.textfield.TextInputLayout>

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textNombreEmpresa"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="20dp"
    android:hint="@string/nombre_de_la_empresa"
    android:textColor="@color/white"
    android:textColorHint="@color/white"
    app:endIconMode="clear_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textNombreProducto"
    tools:ignore="MissingConstraints">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textNombreEmpresa_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

</com.google.android.material.textfield.TextInputLayout>

<ImageButton
    android:id="@+id/btnInfoIdentificacion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@+id/textCodigoIdentidicador"
    app:layout_constraintEnd_toEndOf="@+id/textCodigoIdentidicador"
    android:src="@drawable/ic_icono_info"
    android:background="@color/zxing_transparent"
    />

<com.google.android.material.textfield.TextInputLayout
    android:id="@+id/textCodigoIdentidicador"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="20dp"
    android:hint="@string/identificador_del_producto"
    android:textColor="@color/white"
    android:textColorHint="@color/white"
    app:endIconMode="clear_text"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textNombreEmpresa"
    tools:ignore="MissingConstraints">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textCodigoIdentidicador_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

</com.google.android.material.textfield.TextInputLayout>


<Button
    android:id="@+id/botonMandar"
    style="@style/Widget.Material3.Button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/boton"
    android:text="@string/mandar_ticket"
    android:textColor="@color/white"
    android:textSize="25sp"
    android:textStyle="bold"
    android:layout_margin="30dp"
    android:layout_gravity="center"
    app:layout_constraintTop_toBottomOf="@+id/textCodigoIdentidicador"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>